<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.sfsu.geng.newguideme.blind.video.BlindVideoFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/address_component"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <ToggleButton
            android:id="@+id/blind_video_navigation_toggle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textOff="@string/blind_video_navigation_off"
            android:textOn="@string/blind_video_navigation_on"/>

        <ToggleButton
            android:id="@+id/blind_video_mute_toggle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textOff="@string/blind_video_mute_off"
            android:textOn="@string/blind_video_mute_on"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/blind_video_add_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blind_video_add_button_on"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/blind_video_quit_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blind_video_quit_button"/>

    </android.support.v7.widget.LinearLayoutCompat>

</FrameLayout>
