<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.sfsu.geng.newguideme.blind.BlindVideoActivity"
    tools:showIn="@layout/activity_blind_video">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOn="@string/blind_video_mute_on"
                android:textOff="@string/blind_video_mute_off"
                android:id="@+id/blind_video_mute_toggle"/>
            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textOn="@string/blind_video_navigation_on"
                android:textOff="@string/blind_video_navigation_off"
                android:id="@+id/blind_video_navigation_toggle"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/blind_video_add_button_on"
                android:id="@+id/blind_video_add_btn"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/blind_video_quit_button"
                android:id="@+id/blind_video_quit_btn"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
