<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/reset_password_old_hint"
        android:id="@+id/oldpass"
        android:layout_gravity="center" />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/reset_password_new_hint"
        android:textAlignment="center"
        android:id="@+id/newpass"
        android:layout_gravity="center" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_btn"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="@string/reset_password_button"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/cancelbtn"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:text="@string/login_cancel"/>
</android.support.v7.widget.LinearLayoutCompat>